--- a/updates.html
+++ b/updates.html
@@ -19,7 +19,7 @@
     <div style="display:block;" id="mainDiv" class="animate-bottom">
         <div class="header">
             <img src="assets/images/bunker.png" style="width: 10%;">
-            <h1>bunkerexplorer.com</h1>
+            <p>bunkerexplorer.com</p>
             <div class="nav">
                 <nav>
                     <ul>
