Add responsive styles and update note
Increase main container width (25% → 30%) in index.css and add a mobile media query (max-width: 600px) to adjust element widths, padding, image sizes, and font scaling for better readability on small screens. Add a new update_box entry in updates.html titled "Page Responsiveness" with a timestamp noting the change. These tweaks improve layout and legibility on phones.

--- a/updates.html
+++ b/updates.html
@@ -30,6 +30,12 @@
             </div>
         </div>
 
+        <div class="update_box">
+            <h1>Page Responsiveness</h1>
+            <p>Adjusted styling for better readability on mobile. Hopefully this will pleasant to read on my phone.</p>
+            <p style="color: #54E89E;"><i>Wednesday, February 18, 2026, 11:56:00 pm</i></p>
+        </div>
+
         <div class="update_box" id="first-update">
             <h1>First Update</h1>
             <p>Welcome to my website! My name is Bunker and I'll utilize this website to host various projects, post my thoughts in this review feed, and make any changes I feel suitable.</p>
