Add link styles and update site copy

--- a/updates.html
+++ b/updates.html
@@ -19,7 +19,7 @@
     <div style="display:block;" id="mainDiv" class="animate-bottom">
         <div class="header">
             <img src="assets/images/bunker.png" style="width: 10%;">
-            <p>bunkerexplorer.com</p>
+            <h1>bunkerexplorer.com</h1>
             <div class="nav">
                 <nav>
                     <ul>
@@ -32,7 +32,7 @@
 
         <div class="update_box">
             <h1>Page Responsiveness</h1>
-            <p>Adjusted styling for better readability on mobile. Hopefully this will pleasant to read on my phone.</p>
+            <p>Adjusted styling for better readability on mobile. Hopefully this will be pleasant to read on my phone.</p>
             <p style="color: #54E89E;"><i>Wednesday, February 18, 2026, 11:56:00 pm</i></p>
         </div>
 
