--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div style="display:none;" id="mainDiv" class="animate-bottom">
         <div class="header">
             <img src="assets/images/bunker.png" style="width: 10%;">
-            <p>bunkerexplorer.com<p>
+            <h1>bunkerexplorer.com</h1>
             <div class="nav">
                 <nav>
                     <ul>
@@ -36,8 +36,8 @@
         <div class="box">
             <h2>Welcome to bunkerexplorer's corner of the internet!</h2>
             <p>My name is bunkerexplorer and I am an aspiring developer and cybersecurity engineer. Although I don't have any public sucessful projects, overtime this is what I hope to achieve.</p>
-            <p>I will create a roadmap at some point.</p>
-            <a href="updates.html#first-update">Click here to read my first update</a>
+            <p>I have been vegan for a little more than a year now, so I urge anybody interested to checkout these films: <a href="https://www.dominionmovement.com/watch">The Dominion Movement</a>/<a href="https://www.youtube.com/watch?v=U5hGQDLprA8&list=PLt8jTnUD1mu9Qz1LRJa7NscvO_9J6kx5N">The Speech That Turned me Vegan</a></p>
+            <a href="updates.html#first-update">Click here to read my first update!</a>
         </div>
 
         <div class="footer">
