--- a/updates.html
+++ b/updates.html
@@ -23,8 +23,8 @@
             <div class="nav">
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="updates.html">Updates</a></li>
+                        <li><a href="index.html" style="color:white;">Home</a></li>
+                        <li><a href="updates.html" style="color:white;">Updates</a></li>
                     </ul>
                 </nav>
             </div>
