Update footer contact and add body spacing

--- a/updates.html
+++ b/updates.html
@@ -51,7 +51,7 @@
 
 
         <div class="footer">
-			<h3><em>Contact: Bunker explorer 2000#7500</em></h3>
+			<h3><em>Contact: bunkerexplorer</em></h3>
 			<div class="links">
 				<a href="https://github.com/bunkerexplorer2000/bunkerexplorer" target="_blank"><img src="assets/images/github.png" style="width: 5%;"></a>
 				<a href="https://www.youtube.com/channel/UCZptCyhkchaIB-VqvfPi4Hw" target="_blank"><img src="assets/images/youtube.png" style="width: 5%;"></a>
