Added more responsive behavior for navbar, footer, and slide-in animation for content.
Additionally corrected spelling errors on the main page.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="box">
             <h2>Welcome to bunkerexplorer's corner of the internet!</h2>
-            <p>My name is bunkerexplorer and I am an aspiring developer and cybersecurity engineer. Although I don't have any public sucessful projects, overtime this is what I hope to achieve.</p>
+            <p>My name is bunkerexplorer and I am an aspiring developer and cybersecurity engineer. Although I don't have any successful public projects, that is what I hope to achieve over time.</p>
             <p>I have been vegan for a little more than a year now, so I urge anybody interested to checkout these films: <a href="https://www.dominionmovement.com/watch">The Dominion Movement</a>/<a href="https://www.youtube.com/watch?v=U5hGQDLprA8&list=PLt8jTnUD1mu9Qz1LRJa7NscvO_9J6kx5N">The Speech That Turned me Vegan</a></p>
             <a href="updates.html#first-update">Click here to read my first update!</a>
         </div>
