--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,13 @@
         </div>
 
         <div class="update_box">
+            <h1>Just got fired from my shitty job</h1>
+            <p>The place I worked at sucked so I don't mind. Hanging out wit da boys rn.</p>
+            <img src="assets/images/boys.jpg" style="width: 75%;">
+            <p style="color: #54E89E;"><i>Thursday, February 19, 2026, 4:42:00 pm</i></p>
+        </div>
+
+        <div class="update_box">
             <h1>Page Responsiveness</h1>
             <p>Adjusted styling for better readability on mobile. Hopefully this will be pleasant to read on my phone.</p>
             <p style="color: #54E89E;"><i>Wednesday, February 18, 2026, 11:56:00 pm</i></p>
