--- a/updates.html
+++ b/updates.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="update_box">
-            <h1>Just got fired from my shitty job</h1>
+            <h1>Just got fired from my job</h1>
             <p>The place I worked at sucked so I don't mind. Hanging out wit da boys rn.</p>
             <img src="assets/images/boys.jpg" style="width: 75%;">
             <p style="color: #54E89E;"><i>Thursday, February 19, 2026, 4:42:00 pm</i></p>
